finish first UI

--- a/index.html
+++ b/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./src/assets/css/basic.css">
-    <link rel="stylesheet" href="./src/assets/css/main.css">
-</head>
-<body>
-    <div id="main">
-        <div id="header">
-            <div class="header-left">
-                Natura
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="./src/assets/css/basic.css" />
+        <link rel="stylesheet" href="./src/assets/css/main.css" />
+        <!-- CSS icon -->
+        <link
+            rel="stylesheet"
+            href="./src/assets/icon/fontawesome-free-5.15.4-web/css/all.min.css"
+        />
+    </head>
+    <body>
+        <div id="main" class="grid">
+            <!-- HEADER -->
+            <div id="header">
+                <div class="header-left">Natura</div>
+                <div class="header-right">
+                    <div class="header-right__item">Discover</div>
+                    <div class="header-right__item">Advance Search</div>
+                    <div class="header-right__item">Location</div>
+                </div>
             </div>
+            <!-- END HEADER -->
 
-            <div class="header-right">
-                <div class="header-right__item">
-                    Discover
+            <div id="body">Body</div>
+
+            <div id="footer">
+                <div class="footer-left">
+                    <div class="footer-left__item">
+                        About us
+                    </div>
+                    <div class="footer-left__item">
+                        Contact
+                    </div>
                 </div>
-                <div class="header-right__item">
-                    Advance Search
-                </div>
-                <div class="header-right__item">
-                    Location
+
+                <div class="footer-right">
+                    <div class="footer-right__item">
+                        <i class="fab fa-twitter icon"></i>
+                        Twitter
+                    </div>
+                    <div class="footer-right__item">
+                        <i class="fab fa-facebook-f icon"></i>
+
+                        Facebook
+                    </div>
                 </div>
             </div>
         </div>
-    
-        <div id="body">
-            Body
-        </div>
-    
-        <div id="footer">
-            Footer
-        </div>
-    </div>
-</body>
+    </body>
 </html>
