Finish UI and Refactor code

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             rel="stylesheet"
             href="./src/assets/icon/fontawesome-free-5.15.4-web/css/all.min.css"
         />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     </head>
     <body>
         <div id="main" class="grid">
+
             <!-- HEADER -->
             <div id="header">
                 <div class="header-left">Natura</div>
@@ -26,8 +28,21 @@
             </div>
             <!-- END HEADER -->
 
-            <div id="body">Body</div>
+            <!-- BODY -->
+            <div id="body">
+                <div class="body-container">
+                    <div class="body-title">
+                        KHU BẢO TỒN SÓC TRĂNG
+                    </div>
+                    <div class="body-search">
+                        <input type="text" class="body-search__text" placeholder="Search animal">
+                        <button class="body-search__btn">Search</button>
+                    </div>
+                </div>
+            </div>
+            <!-- END BODY -->
 
+            <!-- FOOTER -->
             <div id="footer">
                 <div class="footer-left">
                     <div class="footer-left__item">
@@ -50,6 +65,8 @@
                     </div>
                 </div>
             </div>
+            <!-- END FOOTER -->
+
         </div>
     </body>
 </html>
