create page Discover

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     </head>
     <body>
-        <div id="main" class="grid">
+        <div id="main" class="grid" style="background-image: url(./src/assets/img/khu-du-lich-sinh-thai-noi-tieng-tai-soc-trang-vuon-co-tan-long-2.jpg);">
 
             <!-- HEADER -->
             <div id="header">
