--- a/info.html
+++ b/info.html
@@ -36,46 +36,93 @@
             <div id="body">
                 <div class="body-container">
                     <div class="body-container__item">
-                        <div
-                            class="body-container__img"
-                            style="
-                                background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
-                            "
-                        ></div>
-                        <div class="body-container__sub">
+                        <div class="body-container__toggle--img">
                             <div
-                                class="body-container__sub--img"
+                                class="body-container__img"
                                 style="
                                     background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
                                 "
                             ></div>
-                            <div
-                                class="body-container__sub--img"
-                                style="
-                                    background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
-                                "
-                            ></div>
-                            <div
-                                class="body-container__sub--img"
-                                style="
-                                    background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
-                                "
-                            ></div>
+                            <div class="body-container__sub">
+                                <div
+                                    class="body-container__sub--img"
+                                    style="
+                                        background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
+                                    "
+                                ></div>
+                                <div
+                                    class="body-container__sub--img"
+                                    style="
+                                        background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
+                                    "
+                                ></div>
+                                <div
+                                    class="body-container__sub--img"
+                                    style="
+                                        background-image: url(./src/assets/img/Microhyla\ heymonsii-LQNgon-003\ -\ Ngôn\ Lâm\ Quang.jpg);
+                                    "
+                                ></div>
+                            </div>
                         </div>
+
                         <div class="body-container__location">
-                            <div class="body-container__location--item">
+                            <div
+                                class="body-container__location--item location-btn"
+                                onclick="myFunction()"
+                            >
                                 <i
                                     class="fas fa-map-marked body-container__location--icon"
                                 ></i>
-                               <div class="body-container__location--text">LOCATION</div>
+                                <div class="body-container__location--text">
+                                    LOCATION
+                                </div>
+                            </div>
+
+                            <div
+                                class="body-container__location--item img-btn display-none"
+                                onclick="myFunction()"
+                            >
+                                <i
+                                    class="far fa-images body-container__location--icon"
+                                ></i>
+                                <div class="body-container__location--text">
+                                    IMAGE
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="body-container__item">
-                        <div class="body-container__item--text">Tên khoa học: Microhyla heymonsii Vogt, 1911</div>
-                        <div class="body-container__item--text">Tên địa phương: Nhái bầu heymon</div>
-                        <div class="body-container__item--text">Ngành: Động vật có dây sống (chordata)</div>
-                        <div class="body-container__item--text2">Đặc điểm: <br> Cơ thể được bao phủ bởi các vảy dạng hạt nhỏ lẫn với một vài vảy trơn tròn hoặc hơi có dạng sóng, nốt sần hình nón; con đực có một chuỗi liên tiếp các lỗ trước huyệt, 14-19 lỗ ở mỗi bên; 2 cặp vảy sau môi dưới, cặp bên ngoài lớn tương tự cặp bên trong, cả 2 đều chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc àm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc  chạm vảy hàm dưới; trên đuôi có các nốt sần dạng gai cao xếp theo hình xoắn ốc</div>
+                        <div class="body-container__item--text">
+                            Tên khoa học: Microhyla heymonsii Vogt, 1911
+                        </div>
+                        <div class="body-container__item--text">
+                            Tên địa phương: Nhái bầu heymon
+                        </div>
+                        <div class="body-container__item--text">
+                            Ngành: Động vật có dây sống (chordata)
+                        </div>
+                        <div class="body-container__item--text2">
+                            Đặc điểm: <br />
+                            Cơ thể được bao phủ bởi các vảy dạng hạt nhỏ lẫn với
+                            một vài vảy trơn tròn hoặc hơi có dạng sóng, nốt sần
+                            hình nón; con đực có một chuỗi liên tiếp các lỗ
+                            trước huyệt, 14-19 lỗ ở mỗi bên; 2 cặp vảy sau môi
+                            dưới, cặp bên ngoài lớn tương tự cặp bên trong, cả 2
+                            đều chạm vảy hàm dưới; trên đuôi có các nốt sần dạng
+                            gai cao xếp theo hình xoắn ốc chạm vảy hàm dưới;
+                            trên đuôi có các nốt sần dạng gai cao xếp theo hình
+                            xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt sần
+                            dạng gai cao xếp theo hình xoắn ốc chạm vảy hàm
+                            dưới; trên đuôi có các nốt sần dạng gai cao xếp theo
+                            hình xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt
+                            sần dạng gai cao xếp theo hình xoắn ốc chạm vảy hàm
+                            dưới; trên đuôi có các nốt sần dạng gai cao xếp theo
+                            hình xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt
+                            sần dạng gai cao xếp theo hình xoắn ốc àm dưới; trên
+                            đuôi có các nốt sần dạng gai cao xếp theo hình xoắn
+                            ốc chạm vảy hàm dưới; trên đuôi có các nốt sần dạng
+                            gai cao xếp theo hình xoắn ốc
+                        </div>
                     </div>
                 </div>
             </div>
@@ -103,4 +150,25 @@
             <!-- END FOOTER -->
         </div>
     </body>
+
+    <script>
+        function myFunction() {
+            let img = document.querySelector("#body .body-container__img");
+            let subImg = document.querySelector("#body .body-container__sub");
+            let locationBtn = document.querySelector(
+                "#body .body-container__location--item.location-btn"
+            );
+            let imgBtn = document.querySelector(
+                "#body .body-container__location--item.img-btn"
+            );
+            let toggleImg = document.querySelector(
+                "#body .body-container__toggle--img"
+            );
+            img.classList.toggle("display-none");
+            subImg.classList.toggle("display-none");
+            imgBtn.classList.toggle("display-none");
+            locationBtn.classList.toggle("display-none");
+            toggleImg.classList.toggle("location");
+        }
+    </script>
 </html>
