--- a/info.html
+++ b/info.html
@@ -103,25 +103,28 @@
                         </div>
                         <div class="body-container__item--text2">
                             Đặc điểm: <br />
-                            Cơ thể được bao phủ bởi các vảy dạng hạt nhỏ lẫn với
-                            một vài vảy trơn tròn hoặc hơi có dạng sóng, nốt sần
-                            hình nón; con đực có một chuỗi liên tiếp các lỗ
-                            trước huyệt, 14-19 lỗ ở mỗi bên; 2 cặp vảy sau môi
-                            dưới, cặp bên ngoài lớn tương tự cặp bên trong, cả 2
-                            đều chạm vảy hàm dưới; trên đuôi có các nốt sần dạng
-                            gai cao xếp theo hình xoắn ốc chạm vảy hàm dưới;
-                            trên đuôi có các nốt sần dạng gai cao xếp theo hình
-                            xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt sần
-                            dạng gai cao xếp theo hình xoắn ốc chạm vảy hàm
-                            dưới; trên đuôi có các nốt sần dạng gai cao xếp theo
-                            hình xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt
-                            sần dạng gai cao xếp theo hình xoắn ốc chạm vảy hàm
-                            dưới; trên đuôi có các nốt sần dạng gai cao xếp theo
-                            hình xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt
-                            sần dạng gai cao xếp theo hình xoắn ốc àm dưới; trên
-                            đuôi có các nốt sần dạng gai cao xếp theo hình xoắn
-                            ốc chạm vảy hàm dưới; trên đuôi có các nốt sần dạng
-                            gai cao xếp theo hình xoắn ốc
+                            
+                            <div class="body-container__item--text2--des">
+                                Cơ thể được bao phủ bởi các vảy dạng hạt nhỏ lẫn với
+                                một vài vảy trơn tròn hoặc hơi có dạng sóng, nốt sần
+                                hình nón; con đực có một chuỗi liên tiếp các lỗ
+                                trước huyệt, 14-19 lỗ ở mỗi bên; 2 cặp vảy sau môi
+                                dưới, cặp bên ngoài lớn tương tự cặp bên trong, cả 2
+                                đều chạm vảy hàm dưới; trên đuôi có các nốt sần dạng
+                                gai cao xếp theo hình xoắn ốc chạm vảy hàm dưới;
+                                trên đuôi có các nốt sần dạng gai cao xếp theo hình
+                                xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt sần
+                                dạng gai cao xếp theo hình xoắn ốc chạm vảy hàm
+                                dưới; trên đuôi có các nốt sần dạng gai cao xếp theo
+                                hình xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt
+                                sần dạng gai cao xếp theo hình xoắn ốc chạm vảy hàm
+                                dưới; trên đuôi có các nốt sần dạng gai cao xếp theo
+                                hình xoắn ốc chạm vảy hàm dưới; trên đuôi có các nốt
+                                sần dạng gai cao xếp theo hình xoắn ốc àm dưới; trên
+                                đuôi có các nốt sần dạng gai cao xếp theo hình xoắn
+                                ốc chạm vảy hàm dưới; trên đuôi có các nốt sần dạng
+                                gai cao xếp theo hình xoắn ốc
+                            </div>
                         </div>
                     </div>
                 </div>
